fixed ClusterCreator.ManageVisibleClusters()

--- a/assets/css/MainStyle.css
+++ b/assets/css/MainStyle.css
@@ -109,6 +109,7 @@ li .fa-graduation-cap {
 
 li .fa-cloud {
 	color: #37956f;
+    font-size:36px;
 
 }
  li:hover .fa-cloud{
